selfcleaning im-memory cache added in the poll

--- a/.env
+++ b/.env
@@ -3,3 +3,6 @@ TELEGRAM_TOKEN=5794411629:AAEFiyVXSeiMks3dK5JUm0hD5g6NFufK7BQ
 LOG_LEVEL=debug
 SQLITE_SOURCE=sqlite3://_data/main.db
 GAME_SPEED=60
+GAME_QUESTIONS_COUNT=10
+CACHE_DEFAULT_EXPIRATION=5
+CACHE_CLEANUP_INTERVAL=10
